// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: clamp(8px, 0.5vw + 6px, 16px) !important;
  margin: 0 !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  white-space: nowrap !important;
  transform: translate3d(0,0,0) !important;
  vertical-align: middle;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for multiline: true 1`] = `
":host {
  display: table-cell !important;
  padding: clamp(8px, 0.5vw + 6px, 16px) !important;
  margin: 0 !important;
  border-bottom: 1px solid var(--p-internal-table-border-color, #D8D8DB) !important;
  white-space: normal !important;
  transform: translate3d(0,0,0) !important;
  vertical-align: middle;
}
:host([hidden]) {
  display: none !important;
}"
`;
